Fix the layout of the collapsed panels

--- a/src/main/css/app.scss
+++ b/src/main/css/app.scss
@@ -302,31 +302,18 @@ form.form-horizontal.loginForm {
   margin-top: 4px;
 }
 
-.collapsiblePane {
+.collapsiblePanel {
+  .icon {
+    margin-right: 5px;
+  }
 
-}
+  .shown {
+    visibility: visible;
+    opacity: 1;
+  }
 
-.collapsiblePane .title {
-  cursor: pointer;
-}
-
-.collapsiblePane .title :hover {
-  border-bottom-color: inherit;
-  border-bottom-style: solid;
-  border-bottom-width: thin;
-}
-
-.collapsiblePane .shown {
-  visibility: visible;
-  opacity: 1;
-}
-
-.collapsiblePane .hidden {
-  visibility: hidden;
-  opacity: 0;
-  -webkit-transition: visibility 1s, opacity 0.5s linear;
-  -moz-transition: visibility 1s, opacity 0.5s linear;
-  -ms-transition: visibility 1s, opacity 0.5s linear;
-  -o-transition: visibility 1s, opacity 0.5s linear;
-  transition: visibility 1s, opacity 0.5s linear;
+  .hidden {
+    visibility: hidden;
+    opacity: 0;
+  }
 }
